# tractseg

./: MANIFEST.in  README.md  pyproject.toml
tractseg/: pipeline_description.json  run.py
tractseg/config/: snakebids.yml
tractseg/workflow/: Snakefile
tractseg/workflow/rules/: peaks.smk  qc.smk  sample.smk  segmentation.smk  setup.smk  transform.smk
tractseg/workflow/scripts/: sample.py
